what is the correct path for links?

--- a/EFGs.html
+++ b/EFGs.html
@@ -7,7 +7,7 @@ title: Ecosystem Functional Groups
 <ul>
   {% for EFG in site.EFGs %}
     <li>
-      <h2><a href="{{ EFG.url }}">{{ EFG.name }}</a></h2>
+      <h2><a href=Ecosystem-profiles-comments/"{{ EFG.url }}">{{ EFG.name }}</a></h2>
       <h3>{{ EFG.biome }}</h3>
          <h4>{{ EFG.contributors }}</h4>
     </li>
