--- a/EFGs.html
+++ b/EFGs.html
@@ -7,8 +7,8 @@ title: Ecosystem Functional Groups
 <ul>
   {% for EFG in site.EFGs %}
     <li>
-      <h2><a href="{{ EFG.url }}">{{ EFG.name }}</a></h2>
-      <h3>{{ EFG.biome }}</h3>
+      <h2><a href="EFGs/{{ EFG.code }}">{{ EFG.name }}</a></h2>
+      <h3><a href="Biomes/{{ EFG.biome }}.html">{{ EFG.biome }}</a></h3>
          <h4>{{ EFG.contributors }}</h4>
     </li>
   {% endfor %}
