--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@ title: Ecosystem Functional Groups
    <div style="background-color:#67A6F5;
    position: fixed;
   bottom: 0;
-  font-size: 13px;
+  font-size: 15px;
   right: 0;
-  border: 3px solid #2173AD;
+   border: 3px solid #AD2221;
   max-width: 35%;
   padding: 15px;
   margin: auto;">
@@ -33,9 +33,9 @@ Your e-mail : <input type="email" name="email"><br/>
  <font size=2 color='#451101'>Add your e-mail, if you would like to be contacted by our team.</font> <br/>
 
 
-   <h3>Your suggestions</h3>
-   <textarea rows=3 cols=40 name="suggestions">Add your comments and suggestions.</textarea><br/>
-   <textarea rows=2 cols=40 name="references">Suggest additional references.</textarea><br/>
+   <h3>Your qualifications</h3>
+   <textarea rows=6 cols=60 name="qualifications">Please add professional qualifications.</textarea><br/>
+   <textarea rows=4 cols=60 name="expertise">Details on your expertise.</textarea><br/>
 
   <button type="submit">Send</button>
 </form>
