--- a/EFGs.html
+++ b/EFGs.html
@@ -8,8 +8,7 @@ title: Ecosystem Functional Groups
   {% for EFG in site.EFGs %}
     <li>
       <h2><a href="EFGs/{{ EFG.code }}">{{ EFG.name }}</a></h2>
-      Biome: <a href="Biomes/{{ EFG.biomecode }}.html">{{ EFG.biome }}</a>
-         <h4>{{ EFG.contributors }}</h4>
+      Biome: <a href="Biomes/{{ EFG.biomecode }}.html">{{ EFG.biome }}</a> | Contributors: {{ EFG.contributors }}
     </li>
   {% endfor %}
 </ul>
