--- a/index.html
+++ b/index.html
@@ -8,12 +8,9 @@ title: Ecosystem Functional Groups
 
 <div style=";
    position: relative;
-  left: 0px;
-  padding: 15px;
-  border: 3px solid #AD2221;
-  width: 60%;">
+  left: 0px;>
 
-   <div style="background-color:#67A6F5;
+   <div style="background-color:#F74665;
    position: fixed;
   bottom: 0;
   font-size: 15px;
