ups! fix a missing "

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Ecosystem Functional Groups
 
 <div style=";
    position: relative;
-  left: 0px;>
+  left: 0px;"">
 
    <div style="background-color:#F74665;
    position: fixed;
