--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: Ecosystem Functional Groups
    position: relative;
   left: 0px;">
 
-   <div style="background-color:#F74665;
+   <div style="background-color:#ffcccc;
    position: fixed;
   bottom: 0;
   font-size: 15px;
