reviewing EFG names

--- a/index.html
+++ b/index.html
@@ -2,11 +2,16 @@
 layout: default
 title: Ecosystem Functional Groups
 ---
-<h1> Global Ecosystem typology</h1>
+<h1> The IUCN Global Ecosystem Typology</h1>
 
-<p>A global ecosystem typology shaped around robust design principles is essential information infrastructure for well-informed decisions to achieve dual, internationally mandated goals of conserving biodiversity and sustaining ecosystem services.</p>
+<p>
+A global ecosystem typology shaped around robust design principles is essential information infrastructure for well-informed decisions to achieve dual, internationally mandated goals of conserving biodiversity and sustaining ecosystem services.</p>
+<p>The <b>IUCN Commission on Ecosystem Management</b> has developed a global ecosystem typology as a framework for global reporting, risk assessment and Red Listing, natural capital accounting, international synthesis. </p>
+<p>The typology has a hierarchical nested structure, with upper levels based on ecosystem function and lower levels discriminating different compositional expressions of functionally similar ecosystems. The finest levels facilitate integration of established national and regional ecological classifications. <b>Ecosystem Functional Groups</b> at Level 3 in the hierarchy provide a direct and relatively simple means for identifying ecosystems with functionally similar traits and processes. Descriptive profiles have been developed for this purpose.</p>
 
 <div style=";
+padding: 15px;
+width: 60%;
    position: relative;
   left: 0px;">
 
@@ -38,20 +43,10 @@ Your e-mail : <input type="email" name="email"><br/>
 </form>
 </div>
 
-<h2> This site</h2>
+<h2>Consultation and feedback</h2>
 
-<p>This site is dedicated to open consultation and review of profiles for Biomes (level 2) and Ecosystem Functional Groups (level 3) of the Global Ecosystem Typology.</p>
+<p>The IUCN Commission on Ecosystem Management co-ordinated a series of workshops and meetings during 2017-2019 to develop, review and refine the Global Ecosystem Typology. The framework was also presented at a number of international symposia, offering opportunities for input to a wide range of ecosystem experts.</p>
+<p>Given evolving knowledge of the world’s ecosystems, the Commission is seeking ongoing input from ecosystem specialists around the world. This site is dedicated to open consultation and review of profiles for Biomes (level 2) and Ecosystem Functional Groups (level 3) of the Global Ecosystem Typology.</p>
+<p>We are seeking specialist comment from ecosystem experts with research or management experience in any of the functional groups of ecosystems described in this site. If you are interested in participating, we request details of qualifications, link to professional profiles (ORCID, google scholar, or similar) and affiliation, as well as area of expertise. The survey provides space for a brief description of you input. The Commission may contact you for further details.</p>
 
-
-<p>We are seeking specialist comment from ecosystem experts. If you are interested in participating, we will request details of qualifications, link to profesional profiles (ORCID, google scholar, or similar) and affiliation, as well as area of expertise.</p>
-
-<h1>Navigate through the Realms</h1>
-
-<ul>
-  {% for Realm in site.Realms %}
-    <li>
-      <a href="Realms/{{ Realm.name }}">{{ Realm.name }}</a>
-    </li>
-  {% endfor %}
-</ul>
 </div>
