layout of form *step 1*

--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@ title: Ecosystem Functional Groups
 ---
 <h1> The IUCN Global Ecosystem Typology</h1>
 
-<p>
-A global ecosystem typology shaped around robust design principles is essential information infrastructure for well-informed decisions to achieve dual, internationally mandated goals of conserving biodiversity and sustaining ecosystem services.</p>
-<p>The <b>IUCN Commission on Ecosystem Management</b> has developed a global ecosystem typology as a framework for global reporting, risk assessment and Red Listing, natural capital accounting, international synthesis. </p>
-<p>The typology has a hierarchical nested structure, with upper levels based on ecosystem function and lower levels discriminating different compositional expressions of functionally similar ecosystems. The finest levels facilitate integration of established national and regional ecological classifications. <b>Ecosystem Functional Groups</b> at Level 3 in the hierarchy provide a direct and relatively simple means for identifying ecosystems with functionally similar traits and processes. Descriptive profiles have been developed for this purpose.</p>
+
 
 <div style=";
 padding: 15px;
@@ -25,8 +22,8 @@ width: 60%;
   padding: 15px;
   margin: auto;">
 <form action="https://smartforms.dev/submit/5e215c4dd2b1f304f0563aff" method="POST">
- We kindly ask your opinion for the development of a Global Ecosystem Typology <br/>
- <h3>Contact information</h3>
+ <h3>Step 1: Register your profile</h3>  <br/>
+ <h4>Contact information</h4>
  Your name: <input type="text" name="name"><br/>
 Your affiliation: <input type="text" name="affiliation"><br/>
 Academic profile: <input type="url" name="profile"><br/>
@@ -35,13 +32,17 @@ Your e-mail : <input type="email" name="email"><br/>
  <font size=2 color='#451101'>Add your e-mail, if you would like to be contacted by our team.</font> <br/>
 
 
-   <h3>Your qualifications</h3>
+   <h4>Your qualifications</h4>
    <textarea rows=6 cols=60 name="qualifications">Please add professional qualifications.</textarea><br/>
    <textarea rows=4 cols=60 name="expertise">Details on your expertise.</textarea><br/>
 
   <button type="submit">Send</button>
 </form>
 </div>
+
+<p>A global ecosystem typology shaped around robust design principles is essential information infrastructure for well-informed decisions to achieve dual, internationally mandated goals of conserving biodiversity and sustaining ecosystem services.</p>
+<p>The <b>IUCN Commission on Ecosystem Management</b> has developed a global ecosystem typology as a framework for global reporting, risk assessment and Red Listing, natural capital accounting, international synthesis. </p>
+<p>The typology has a hierarchical nested structure, with upper levels based on ecosystem function and lower levels discriminating different compositional expressions of functionally similar ecosystems. The finest levels facilitate integration of established national and regional ecological classifications. <b>Ecosystem Functional Groups</b> at Level 3 in the hierarchy provide a direct and relatively simple means for identifying ecosystems with functionally similar traits and processes. Descriptive profiles have been developed for this purpose.</p>
 
 <h2>Consultation and feedback</h2>
 
