Explain steps for filling the forms

--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@ title: Ecosystem Functional Groups
 ---
 <h1> The IUCN Global Ecosystem Typology</h1>
 
-
-
 <div style=";
 padding: 15px;
 width: 60%;
@@ -22,7 +20,7 @@ width: 60%;
   padding: 15px;
   margin: auto;">
 <form action="https://smartforms.dev/submit/5e215c4dd2b1f304f0563aff" method="POST">
- <h3>Step 1: Register your profile</h3>  <br/>
+ <h3>Step 1: Register your profile</h3>
  <h4>Contact information</h4>
  Your name: <input type="text" name="name"><br/>
 Your affiliation: <input type="text" name="affiliation"><br/>
@@ -33,8 +31,8 @@ Your e-mail : <input type="email" name="email"><br/>
 
 
    <h4>Your qualifications</h4>
-   <textarea rows=6 cols=60 name="qualifications">Please add professional qualifications.</textarea><br/>
-   <textarea rows=4 cols=60 name="expertise">Details on your expertise.</textarea><br/>
+   <textarea rows=4 cols=60 name="qualifications">Please add relevant details on your professional qualifications.</textarea><br/>
+   <textarea rows=7 cols=60 name="expertise">Describe your expertise on specific biomes and ecosystems.</textarea><br/>
 
   <button type="submit">Send</button>
 </form>
@@ -48,6 +46,8 @@ Your e-mail : <input type="email" name="email"><br/>
 
 <p>The IUCN Commission on Ecosystem Management co-ordinated a series of workshops and meetings during 2017-2019 to develop, review and refine the Global Ecosystem Typology. The framework was also presented at a number of international symposia, offering opportunities for input to a wide range of ecosystem experts.</p>
 <p>Given evolving knowledge of the world’s ecosystems, the Commission is seeking ongoing input from ecosystem specialists around the world. This site is dedicated to open consultation and review of profiles for Biomes (level 2) and Ecosystem Functional Groups (level 3) of the Global Ecosystem Typology.</p>
-<p>We are seeking specialist comment from ecosystem experts with research or management experience in any of the functional groups of ecosystems described in this site. If you are interested in participating, we request details of qualifications, link to professional profiles (ORCID, google scholar, or similar) and affiliation, as well as area of expertise. The survey provides space for a brief description of you input. The Commission may contact you for further details.</p>
-
+<p>We are seeking specialist comment from ecosystem experts with research or management experience in any of the functional groups of ecosystems described in this site. If you are interested in participating, please follow this steps:</p>
+<ol>
+  <li> Use the pink form on the right to share with us details of qualifications, link to professional profiles (ORCID, google scholar, or similar) and affiliation, as well as area of expertise. The survey provides space for a brief description of you input. The Commission may contact you for further details.</li>
+  <li> Navigate through the <a href="Realms.html">Realms</a> to reach the profiles of <a href="Biomes.html">Biomes</a> (level 2) and <a href="EFGs.html">Ecosystem Functional Groups</a> (level 3). In each profile page you can fill the blue form to evaluate the profile's content and add specific comments and suggestions.</li>
 </div>
