reForm the forms

--- a/index.html
+++ b/index.html
@@ -19,23 +19,7 @@ width: 60%;
   max-width: 35%;
   padding: 15px;
   margin: auto;">
-<form action="https://smartforms.dev/submit/5e215c4dd2b1f304f0563aff" method="POST">
- <h3>Step 1: Register your profile</h3>
- <h4>Contact information</h4>
- Your name: <input type="text" name="name"><br/>
-Your affiliation: <input type="text" name="affiliation"><br/>
-Academic profile: <input type="url" name="profile"><br/>
- <font size=2 color='#451101'>Please add the url of a public profesional profile for verification of expertise.For example: public profile in ORCID, google scholar, linkedIn, university portal or own webpage.</font><br/>
-Your e-mail : <input type="email" name="email"><br/>
- <font size=2 color='#451101'>Add your e-mail, if you would like to be contacted by our team.</font> <br/>
-
-
-   <h4>Your qualifications</h4>
-   <textarea rows=4 cols=60 name="qualifications">Please add relevant details on your professional qualifications.</textarea><br/>
-   <textarea rows=7 cols=60 name="expertise">Describe your expertise on specific biomes and ecosystems.</textarea><br/>
-
-  <button type="submit">Send</button>
-</form>
+{% include form1.html %}
 </div>
 
 <p>A global ecosystem typology shaped around robust design principles is essential information infrastructure for well-informed decisions to achieve dual, internationally mandated goals of conserving biodiversity and sustaining ecosystem services.</p>
