fix include forms

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ width: 60%;
   max-width: 35%;
   padding: 15px;
   margin: auto;">
-{% include form1.html %}
+{% include form-step1.html %}
 </div>
 
 <p>A global ecosystem typology shaped around robust design principles is essential information infrastructure for well-informed decisions to achieve dual, internationally mandated goals of conserving biodiversity and sustaining ecosystem services.</p>
