Landing page after registering, update forms

--- a/Realms.html
+++ b/Realms.html
@@ -5,10 +5,15 @@ section: browse
 ---
 <h1>Realms</h1>
 
+<p>Navigate through the realms to see the list of biomes. Transitional biomes are linked to two or three realms.</p>
+
+
 <ul>
   {% for Realm in site.Realms %}
     <li>
       <h3><a href="Realms/{{ Realm.name }}">{{ Realm.name }}</a></h3>
+      {% capture my_include %}{% include _Realms/{{ Realm.name }}.md %}{% endcapture %}
+      {{ my_include | markdownify }}
     </li>
   {% endfor %}
 </ul>
