--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Ecosystem Functional Groups
+title: Welcome to the IUCN Global Ecosystem Typology website
 ---
 <h1> The IUCN Global Ecosystem Typology</h1>
 
