--- a/EFGs.html
+++ b/EFGs.html
@@ -13,3 +13,4 @@ section: browse
     </li>
   {% endfor %}
 </ul>
+Back to: <a href="../Realms.html">Realm overview</a> / <a href="../Biomes.html">Biome overview</a>
