changes proposed by Ada

--- a/EFGs.html
+++ b/EFGs.html
@@ -4,7 +4,10 @@ title: Ecosystem Functional Groups
 section: browse
 ---
 <h1>Ecosystem Functional Groups</h1>
-
+<p>A global ecosystem typology shaped around robust design principles is essential information infrastructure for well-informed decisions to achieve dual, internationally mandated goals of conserving biodiversity and sustaining ecosystem services.</p>
+<p>The <b>IUCN Commission on Ecosystem Management</b> has developed a global ecosystem typology as a framework for global reporting, risk assessment and Red Listing, natural capital accounting, international synthesis. </p>
+<p>The typology has a hierarchical nested structure, with upper levels based on ecosystem function and lower levels discriminating different compositional expressions of functionally similar ecosystems. The finest levels facilitate integration of established national and regional ecological classifications. <b>Ecosystem Functional Groups</b> at Level 3 in the hierarchy provide a direct and relatively simple means for identifying ecosystems with functionally similar traits and processes. </p>
+<p>Below is a list of 102 Ecosystem Functional Groups with links to their profiles.</p>
 <ul>
   {% for EFG in site.EFGs %}
     <li>
