--- a/Realms.html
+++ b/Realms.html
@@ -5,7 +5,10 @@ section: browse
 ---
 <h1>Realms</h1>
 
-<p>Navigate through the realms to see the list of biomes. Transitional biomes are linked to two or three realms.</p>
+<p>A global ecosystem typology shaped around robust design principles is essential information infrastructure for well-informed decisions to achieve dual, internationally mandated goals of conserving biodiversity and sustaining ecosystem services.</p>
+<p>The <b>IUCN Commission on Ecosystem Management</b> has developed a global ecosystem typology as a framework for global reporting, risk assessment and Red Listing, natural capital accounting, international synthesis. </p>
+<p>The typology has a hierarchical nested structure, with upper levels based on ecosystem function and lower levels discriminating different compositional expressions of functionally similar ecosystems. The finest levels facilitate integration of established national and regional ecological classifications. </p>
+<p>Realms represent the top level of the typology. Navigate through the realms to see the list of biomes (level 2). Transitional biomes are linked to two or three realms.</p>
 
 <ul>
   {% for Realm in site.Realms %}
