--- a/Biomes.html
+++ b/Biomes.html
@@ -5,6 +5,11 @@ section: browse
 ---
 <h1>Biomes</h1>
 
+<p>A global ecosystem typology shaped around robust design principles is essential information infrastructure for well-informed decisions to achieve dual, internationally mandated goals of conserving biodiversity and sustaining ecosystem services.</p>
+<p>The <b>IUCN Commission on Ecosystem Management</b> has developed a global ecosystem typology as a framework for global reporting, risk assessment and Red Listing, natural capital accounting, international synthesis. </p>
+<p>The typology has a hierarchical nested structure, with upper levels based on ecosystem function and lower levels discriminating different compositional expressions of functionally similar ecosystems. The finest levels facilitate integration of established national and regional ecological classifications. </p>
+<p>Biomes represent the second level of the typology. Below is a complete list of all biomes currently recognized.</p>
+
 <ul>
   {% for Biome in site.Biomes %}
     <li>
