--- a/Realms.html
+++ b/Realms.html
@@ -10,11 +10,13 @@ section: browse
 <p>The typology has a hierarchical nested structure, with upper levels based on ecosystem function and lower levels discriminating different compositional expressions of functionally similar ecosystems. The finest levels facilitate integration of established national and regional ecological classifications. </p>
 <p>Realms represent the top level of the typology. Navigate through the realms to see the list of biomes (level 2). Transitional biomes are linked to two or three realms.</p>
 
+<p>The five realms represent all parts of the biosphere. A conceptual model of ecosystem assembly was used to describe and compare the ecological drivers and traits that characterise the five realms. This comparative analysis helped to identify major gradients of variation and informed the definition of <a href="#">functional biomes (level 2)</a> and <a href="#">ecosystem functional groups (level 3)</a> within each realm. Examples of these gradients are illustrated in Fig. 2. The comparative analysis iteratively was refined as levels 2 and 3 of the typology were developed, enabling a comprehensive overview of ecosystem drivers and traits across the biosphere and a synopsis of each realm (Table S3.2).</p>
+
 <ul>
   {% for Realm in site.Realms %}
     <li>
       <h3><a href="Realms/{{ Realm.name }}">{{ Realm.name }}</a></h3>
-      {{ Realm.content | markdownify }}
+      {{ Realm.excerpt | markdownify }}
     </li>
   {% endfor %}
 </ul>
