Note on transitional realms

--- a/Realms.html
+++ b/Realms.html
@@ -5,12 +5,7 @@ section: browse
 ---
 <h1>Realms</h1>
 
-<p>A global ecosystem typology shaped around robust design principles is essential information infrastructure for well-informed decisions to achieve dual, internationally mandated goals of conserving biodiversity and sustaining ecosystem services.</p>
-<p>The <b>IUCN Commission on Ecosystem Management</b> has developed a global ecosystem typology as a framework for global reporting, risk assessment and Red Listing, natural capital accounting, international synthesis. </p>
-<p>The typology has a hierarchical nested structure, with upper levels based on ecosystem function and lower levels discriminating different compositional expressions of functionally similar ecosystems. The finest levels facilitate integration of established national and regional ecological classifications. </p>
-<p>Realms represent the top level of the typology. Navigate through the realms to see the list of biomes (level 2). Transitional biomes are linked to two or three realms.</p>
-
-<p>The five realms represent all parts of the biosphere. A conceptual model of ecosystem assembly was used to describe and compare the ecological drivers and traits that characterise the five realms. This comparative analysis helped to identify major gradients of variation and informed the definition of <a href="#">functional biomes (level 2)</a> and <a href="#">ecosystem functional groups (level 3)</a> within each realm. Examples of these gradients are illustrated in Fig. 2. The comparative analysis iteratively was refined as levels 2 and 3 of the typology were developed, enabling a comprehensive overview of ecosystem drivers and traits across the biosphere and a synopsis of each realm (Table S3.2).</p>
+<p>The five realms represent all parts of the biosphere. A conceptual model of ecosystem assembly was used to describe and compare the ecological drivers and traits that characterise the five realms. This comparative analysis helped to identify major gradients of variation and informed the definition of <a href="Biomes.html">functional biomes (level 2)</a> and <a href="EFGs.html">ecosystem functional groups (level 3)</a> within each realm.</p>
 
 <ul>
   {% for Realm in site.Realms %}
@@ -20,3 +15,7 @@ section: browse
     </li>
   {% endfor %}
 </ul>
+
+<h3>A note on transitional realms</h3>
+<p>Transitional realms accommodate continuous variation among the core units. The interface between terrestrial and freshwater realms is occupied by palustrine wetlands, some of which accumulate peat under impeded substrate drainage. The freshwater-marine transitional realm is occupied by brackish aquatic ecosystems on marine coasts. The marine-terrestrial transitional realm is characterised by steep environmental gradients in desiccation, salinity and wave and tide disturbance, occupied by contrasting shoreline ecosystems. The interface of marine and terrestrial seepage is sometimes influenced by seepage or outflow of freshwater, supporting intertidal wetlands and deltaic systems. Unique ecosystems also occur where the subterranean realm meets the interface of freshwater and marine realms, respectively.</p>
+<p>The functional biomes belonging to these transitional realms are linked to all their parent realms.</p>
