typology document v1.0 released

--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@ width: 60%;
 
 <h2>Consultation and feedback</h2>
 
-<p>The IUCN Commission on Ecosystem Management co-ordinated a series of workshops and meetings during 2017-2019 to develop, review and refine the Global Ecosystem Typology. The framework was also presented at a number of international symposia, offering opportunities for input to a wide range of ecosystem experts.</p>
+<p>The IUCN Commission on Ecosystem Management co-ordinated a series of workshops and meetings during 2017-2019 to develop, review and refine the <a href="https://iucnrle.org/about-rle/ongoing-initiatives/global-ecosystem-typology/">Global Ecosystem Typology</a>. The framework was also presented at a number of international symposia, offering opportunities for input to a wide range of ecosystem experts.</p>
+
+<p>You can read more on the IUCN Global Ecosystem Typology <a href="Summary.html">here</a>.</p>
+
 <p>Given evolving knowledge of the world’s ecosystems, the Commission is seeking ongoing input from ecosystem specialists around the world. This site is dedicated to open consultation and review of profiles for Biomes (level 2) and Ecosystem Functional Groups (level 3) of the Global Ecosystem Typology. Each Ecosystem Functional Groups has a <a href="Profile-structure.html">descriptive profile</a>.</p>
 
 <p>We are seeking specialist comment from ecosystem experts with research or management experience in any of the functional groups of ecosystems described in this site. If you are interested in participating, please follow this steps:</p>
@@ -32,8 +35,4 @@ width: 60%;
   <li> Use the pink form on the right to share with us details of your qualifications, link to one professional profile (ORCID, google scholar, or similar) and affiliation, as well as your area of expertise. The survey provides space for a brief description of you input. The Commission may contact you for further details.</li>
   <li> Navigate through the <a href="Realms.html">Realms</a> to reach the profiles of <a href="Biomes.html">Biomes</a> (level 2) and <a href="EFGs.html">Ecosystem Functional Groups</a> (level 3). In each profile page you can fill the blue form to evaluate the profile's content and add specific comments and suggestions.</li>
 
-  <h2>A very brief background</h2>
-  <p>A global ecosystem typology shaped around robust design principles is essential information infrastructure for well-informed decisions to achieve dual, internationally mandated goals of conserving biodiversity and sustaining ecosystem services.</p>
-  <p>The <b>IUCN Commission on Ecosystem Management</b> has developed a global ecosystem typology as a framework for global reporting, risk assessment and Red Listing, natural capital accounting, international synthesis. </p>
-  <p>The typology has a hierarchical nested structure, with upper levels based on ecosystem function and lower levels discriminating different compositional expressions of functionally similar ecosystems. The finest levels facilitate integration of established national and regional ecological classifications. <b>Ecosystem Functional Groups</b> at Level 3 in the hierarchy provide a direct and relatively simple means for identifying ecosystems with functionally similar traits and processes. Descriptive profiles have been developed for this purpose.</p>
 </div>
