added summary in the navigation list

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ width: 60%;
 
 <h2>Consultation and feedback</h2>
 
-<p>The IUCN Commission on Ecosystem Management co-ordinated a series of workshops and meetings during 2017-2019 to develop, review and refine the <a href="https://iucnrle.org/about-rle/ongoing-initiatives/global-ecosystem-typology/">Global Ecosystem Typology</a>. The framework was also presented at a number of international symposia, offering opportunities for input to a wide range of ecosystem experts.</p>
+<p>The IUCN Commission on Ecosystem Management co-ordinated a series of workshops and meetings during 2017-2019 to develop, review and refine the <a href="https://iucnrle.org/about-rle/ongoing-initiatives/global-ecosystem-typology/" target="_blank">Global Ecosystem Typology</a>. The framework was also presented at a number of international symposia, offering opportunities for input to a wide range of ecosystem experts.</p>
 
 <p>You can read more on the IUCN Global Ecosystem Typology <a href="Summary.html">here</a>.</p>
 
@@ -34,5 +34,5 @@ width: 60%;
 <ol>
   <li> Use the pink form on the right to share with us details of your qualifications, link to one professional profile (ORCID, google scholar, or similar) and affiliation, as well as your area of expertise. The survey provides space for a brief description of you input. The Commission may contact you for further details.</li>
   <li> Navigate through the <a href="Realms.html">Realms</a> to reach the profiles of <a href="Biomes.html">Biomes</a> (level 2) and <a href="EFGs.html">Ecosystem Functional Groups</a> (level 3). In each profile page you can fill the blue form to evaluate the profile's content and add specific comments and suggestions.</li>
-
+</ol>
 </div>
