--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@ title: Welcome to the IUCN Global Ecosystem Typology website
 ---
 <h1> The IUCN Global Ecosystem Typology</h1>
 
-
+<!--//
 <div style=";
 padding: 15px;
 width: 60%;
    position: relative;
   left: 0px;">
 
-<!--//
+
    <div style="background-color:#ffcccc;
    position: fixed;
   bottom: 0;
@@ -35,7 +35,9 @@ width: 60%;
 
 <p>We are seeking specialist comment from ecosystem experts with research or management experience in any of the functional groups of ecosystems described in this site. If you are interested in participating, please follow this steps:</p>
 <ol>
-  <li> Please [complete a short survey](https://forms.gle/8Cwyd36AFyrL74VYA) to share with us details of your qualifications, link to one professional profile (ORCID, google scholar, or similar) and affiliation, as well as your area of expertise. The survey provides space for a brief description of you input. The Commission may contact you for further details.</li>
+  <li> Please <a href="https://forms.gle/8Cwyd36AFyrL74VYA">complete a short survey</a> to share with us details of your qualifications, link to one professional profile (ORCID, google scholar, or similar) and affiliation, as well as your area of expertise. The survey provides space for a brief description of you input. The Commission may contact you for further details.</li>
   <li> Navigate through the <a href="Realms.html">Realms</a> to reach the profiles of <a href="Biomes.html">Biomes</a> (level 2) and <a href="EFGs.html">Ecosystem Functional Groups</a> (level 3). In each profile page you can fill the blue form to evaluate the profile's content and add specific comments and suggestions.</li>
 </ol>
+<!--//
 </div>
+//-->
