--- a/Summary.html
+++ b/Summary.html
@@ -24,12 +24,12 @@ title: Brief summary of the IUCN Global Ecosystem Typology
 
 <h2>Consultation and feedback</h2>
 
-<p>The IUCN Commission on Ecosystem Management co-ordinated a series of workshops and meetings during 2017-2019 to develop, review and refine the <a href="https://iucnrle.org/about-rle/ongoing-initiatives/global-ecosystem-typology/" target="_blank">Global Ecosystem Typology</a>. The framework was also presented at a number of international symposia, offering opportunities for input to a wide range of ecosystem experts.</p>
+<p>The IUCN Commission on Ecosystem Management <a href="Development.html">co-ordinated a series of workshops and meetings during 2017-2019</a> to develop, review and refine the <a href="https://iucnrle.org/about-rle/ongoing-initiatives/global-ecosystem-typology/" target="_blank">Global Ecosystem Typology</a>. The framework was also presented at a number of international symposia, offering opportunities for input to a wide range of ecosystem experts.</p>
 
 <p>Given evolving knowledge of the world’s ecosystems, the Commission is seeking ongoing input from ecosystem specialists around the world. This site is dedicated to open consultation and review of profiles for Biomes (level 2) and Ecosystem Functional Groups (level 3) of the Global Ecosystem Typology. Each Ecosystem Functional Groups has a <a href="Profile-structure.html">descriptive profile</a>.</p>
 
 <p>We are seeking specialist comment from ecosystem experts with research or management experience in any of the functional groups of ecosystems described in this site. If you are interested in participating, please follow this steps:</p>
 <ol>
-  <li> Go back to the <a href="index.html">home page</a> amd use the pink form on the right to share with us details of your qualifications, link to one professional profile (ORCID, google scholar, or similar) and affiliation, as well as your area of expertise. The survey provides space for a brief description of you input. The Commission may contact you for further details.</li>
+  <li>Please <a href="https://forms.gle/8Cwyd36AFyrL74VYA" target="_blank">complete a short survey</a> to share with us details of your qualifications, link to one professional profile (ORCID, google scholar, or similar) and affiliation, as well as your area of expertise. The survey provides space for a brief description of you input. The Commission may contact you for further details.</li>
   <li> Navigate through the <a href="Realms.html">Realms</a> to reach the profiles of <a href="Biomes.html">Biomes</a> (level 2) and <a href="EFGs.html">Ecosystem Functional Groups</a> (level 3). In each profile page you can fill the blue form to evaluate the profile's content and add specific comments and suggestions.</li>
 </ol>
