--- a/Summary.html
+++ b/Summary.html
@@ -24,7 +24,7 @@ title: Brief summary of the IUCN Global Ecosystem Typology
 
 <h2>Consultation and feedback</h2>
 
-<p>The IUCN Commission on Ecosystem Management <a href="Development.html">co-ordinated a series of workshops and meetings during 2017-2019</a> to develop, review and refine the <a href="https://iucnrle.org/about-rle/ongoing-initiatives/global-ecosystem-typology/" target="_blank">Global Ecosystem Typology</a>. The framework was also presented at a number of international symposia, offering opportunities for input to a wide range of ecosystem experts.</p>
+<p>The IUCN Commission on Ecosystem Management co-ordinated a <a href="Development.html">series of workshops and meetings during 2017-2019</a> to develop, review and refine the <a href="https://iucnrle.org/about-rle/ongoing-initiatives/global-ecosystem-typology/" target="_blank">Global Ecosystem Typology</a>. The framework was also presented at a number of international symposia, offering opportunities for input to a wide range of ecosystem experts.</p>
 
 <p>Given evolving knowledge of the world’s ecosystems, the Commission is seeking ongoing input from ecosystem specialists around the world. This site is dedicated to open consultation and review of profiles for Biomes (level 2) and Ecosystem Functional Groups (level 3) of the Global Ecosystem Typology. Each Ecosystem Functional Groups has a <a href="Profile-structure.html">descriptive profile</a>.</p>
 
