--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ width: 60%;
 
 <h2>Consultation and feedback</h2>
 
-<p>The <b>IUCN Commission on Ecosystem Management</b> co-ordinated <a href="Development.html">series of workshops and meetings during 2017-2019</a> to develop, review and refine the <a href="https://iucnrle.org/about-rle/ongoing-initiatives/global-ecosystem-typology/" target="_blank">Global Ecosystem Typology</a>. The framework was also presented at a number of international symposia, offering opportunities for input to a wide range of ecosystem experts.</p>
+<p>The <b style='font-size: 15px;font-weight: bold;'>IUCN Commission on Ecosystem Management</b> co-ordinated <a href="Development.html">series of workshops and meetings during 2017-2019</a> to develop, review and refine the <a href="https://iucnrle.org/about-rle/ongoing-initiatives/global-ecosystem-typology/" target="_blank">Global Ecosystem Typology</a>. The framework was also presented at a number of international symposia, offering opportunities for input to a wide range of ecosystem experts.</p>
 
 <p>You can read more on the IUCN Global Ecosystem Typology <a href="Summary.html">here</a>.</p>
 
