fix broken links

--- a/EFGs.html
+++ b/EFGs.html
@@ -17,4 +17,4 @@ section: browse
     </li>
   {% endfor %}
 </ul>
-Back to: <a href="../Realms.html">Realm overview</a> / <a href="../Biomes.html">Biome overview</a>
+Back to: <a href="/Ecosystem-profiles-comments/Realms.html">Realm overview</a> / <a href="/Ecosystem-profiles-comments/Biomes.html">Biome overview</a>
