Add link to map references

--- a/Map-summary.html
+++ b/Map-summary.html
@@ -4,7 +4,7 @@ title: Map summary
 section: browse
 ---
 <h2> Summary of map details</h2>
-<p> This table summarizes information regarding sources used for generating the indicative maps for all Ecosystem Functional Groups.</p>
+<p> This table summarizes information regarding sources used for generating the indicative maps for all Ecosystem Functional Groups. Alternatively, follow <a href='/Ecosystem-profiles-comments/Map-references.html'>this link to see the list of references used for the maps</a>.</p>
 <table>
 <tr><th>Map version</th><th>Description</th><th>Contributors</th></tr>
 
@@ -468,7 +468,17 @@ section: browse
 <tr><td>
  MT2.1.IM.orig <br/>  v1.0 <br/>DOI: <a href='http://doi.org/10.5281/zenodo.3546514' target='_blank'>10.5281/zenodo.3546514</a>
 </td>
-<td> </td>
+<td> Coastlines between 60°S and 60°N.</td>
+<td>DA Keith , JR Ferrer-Paris </td></tr>
+
+<tr><th colspan=3>MT3. Anthropogenic shorelines biome</th></tr>
+
+<tr><td colspan=3><a href='/Ecosystem-profiles-comments/EFGs/MT3.1'><b style='font-size: 15px;font-weight: bold; color:black;'>MT3.1 Artificial shores</b></a></td></tr>
+
+<tr><td>
+ MT3.1.IM.orig <br/>  v1.0 <br/>DOI: <a href='http://doi.org/10.5281/zenodo.3546514' target='_blank'>10.5281/zenodo.3546514</a>
+</td>
+<td> Urbanized coastlines between 60°S and 60°N.</td>
 <td>DA Keith , JR Ferrer-Paris </td></tr>
 
 <tr><th colspan=3>S1. Subterranean lithic biome</th></tr>
@@ -550,7 +560,7 @@ section: browse
 <tr><td>
  T1.1.IM.v2 <br/>  v2.0 <br/>
 </td>
-<td> Areas of evergreen broadleaf forest cover where identified from consensus land-cover maps (Tuanmu et al. 2014), and cropped to areas of tropical climates (Beck et al. 2018), occurrences were then aggregated to half degree spatial resolution and reclassified as major occurrences (>80% occurrence) and minor occurrences (< 80% occurrence).</td>
+<td> Areas of evergreen broadleaf forest cover were identified from consensus land-cover maps (Tuanmu et al. 2014), and cropped to areas of tropical climates (Beck et al. 2018), occurrences were then aggregated to half degree spatial resolution and reclassified as major occurrences (>80% occurrence) and minor occurrences (< 80% occurrence).</td>
 <td>JR Ferrer-Paris , DA Keith </td></tr>
 
 <tr><td colspan=3><a href='/Ecosystem-profiles-comments/EFGs/T1.2'><b style='font-size: 15px;font-weight: bold; color:black;'>T1.2 Tropical/Subtropical dry forests and scrubs</b></a></td></tr>
@@ -560,6 +570,12 @@ section: browse
 </td>
 <td> Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews (cited in respective reference sections of profiles), maps of relevant ecosystems, and experts.</td>
 <td>DA Keith , JR Ferrer-Paris </td></tr>
+ 
+<tr><td>
+ T1.2.IM.v2 <br/>  v2.0 <br/>
+</td>
+<td> Areas of deciduous broadleaf and mixed forest cover were identified from consensus land-cover maps (Tuanmu et al. 2014), and cropped to areas of tropical climates (Beck et al. 2018), occurrences were then aggregated to half degree spatial resolution and reclassified as major occurrences (>80% occurrence) and minor occurrences (< 80% occurrence).</td>
+<td>JR Ferrer-Paris , DA Keith </td></tr>
 
 <tr><td colspan=3><a href='/Ecosystem-profiles-comments/EFGs/T1.3'><b style='font-size: 15px;font-weight: bold; color:black;'>T1.3 Tropical/Subtropical montane rainforests</b></a></td></tr>
 
@@ -572,7 +588,7 @@ section: browse
 <tr><td>
  T1.3.IM.v2 <br/>  v2.0 <br/>
 </td>
-<td> Areas of evergreen broadleaf forest cover where identified from consensus land-cover maps (Tuanmu et al. 2014), and cropped to mountain areas in tropical regions (Körner et al. 2011; Karger et al. 2017), occurrences were then aggregated to half degree spatial resolution and reclassified as major occurrences (>80% occurrence) and minor occurrences (< 80% occurrence).</td>
+<td> Areas of evergreen broadleaf forest cover were identified from consensus land-cover maps (Tuanmu et al. 2014), and cropped to mountain areas in tropical regions (Körner et al. 2011; Karger et al. 2017), occurrences were then aggregated to half degree spatial resolution and reclassified as major occurrences (>80% occurrence) and minor occurrences (< 80% occurrence).</td>
 <td>JR Ferrer-Paris , DA Keith </td></tr>
 
 <tr><td colspan=3><a href='/Ecosystem-profiles-comments/EFGs/T1.4'><b style='font-size: 15px;font-weight: bold; color:black;'>T1.4 Tropical heath forests</b></a></td></tr>
@@ -604,7 +620,7 @@ section: browse
 <tr><td>
  T2.2.IM.v2 <br/>  v2.0 <br/>
 </td>
-<td> Areas of deciduous and mixed forest cover where identified from consensus land-cover maps (Tuanmu et al. 2014), and cropped to areas with temperate climates in the northern hemisphere (Karger et al. 2017), occurrences were then aggregated to half degree spatial resolution and reclassified as major occurrences (>80% occurrence) and minor occurrences (< 80% occurrence).</td>
+<td> Areas of deciduous and mixed forest cover were identified from consensus land-cover maps (Tuanmu et al. 2014), and cropped to areas with temperate climates in the northern hemisphere (Karger et al. 2017), occurrences were then aggregated to half degree spatial resolution and reclassified as major occurrences (>80% occurrence) and minor occurrences (< 80% occurrence).</td>
 <td>JR Ferrer-Paris , DA Keith </td></tr>
 
 <tr><td colspan=3><a href='/Ecosystem-profiles-comments/EFGs/T2.3'><b style='font-size: 15px;font-weight: bold; color:black;'>T2.3 Oceanic temperate rainforests</b></a></td></tr>
