--- a/Map-references.html
+++ b/Map-references.html
@@ -6,7 +6,7 @@ section: browse
 <h2> Summary of references used in the indicative maps</h2>
 <p> This table indicates which references were used for generating the indicative maps of each functional group. Alternatively, follow <a href='/Ecosystem-profiles-comments/Map-summary.html'>this link to see a summary of map details</a>.</p>
 <table>
-<tr><th>Reference</th><th>Map version 1.0</th><th>Map version 2.0</th></tr>
+<tr><th width='30%'>Reference</th><th>Map version 1.0</th><th>Map version 2.0</th></tr>
 <tr><th>‘Plate lines and polygons’ data by USGS/ESRI (<a href="https://www.arcgis.com/home/item.html?id=f155b76c13c84f62864446847f1ae652">https://www.arcgis.com/home/item.html?id=f155b76c13c84f62864446847f1ae652</a>, downloaded 5/5/2019)</th>
 <td>M3.7</td><td></td></tr><tr><th>Abell R, Thieme ML, Revenga C, Bryer M, Kottelat M, Bogutskaya N, Coad B, Mandrak N, Contreras Balderas S, Bussing W, Stiassny MLJ, Skelton P, Allen GR, Unmack P, Naseka A, Ng R, Sindorf N, Robertson J, Armijo E, Higgins JV, Heibel TJ, Wikramanayake E, Olson D, López HL, Reis RE, Lundberg JG, Sabaj Pérez MH, Petry P (2008)Freshwater ecoregions of the world: A new map of biogeographic units for freshwater biodiversity conservation, BioScience 58: 403–414.</th>
 <td>F1.1, F1.2, F1.3, F1.4, F1.5, F1.6, F2.1, F2.2, F2.3, F2.4, F2.5, F2.6, F2.7, F2.8, F2.9, F3.2, F3.4, F3.5, SF2.1, TF1.4, TF1.5</td><td></td></tr><tr><th>Armston, J., Scarth, P., Lucas, R., Lewis, P., Disney, M., Phinn, S. (2015). <em>Validation of continental scale vertical plant profile mapping using waveform lidar airborne laser scanning</em>. In Conference Proceedings: <strong>Silvilaser 2015</strong>, La Grande Motte, France, 28-30 September.</th>
