--- a/Map-references.html
+++ b/Map-references.html
@@ -5,7 +5,8 @@ section: browse
 ---
 <h2> Summary of references used in the indicative maps</h2>
 <p> This table indicates which references were used for generating the indicative maps of each functional group. Alternatively, follow <a href='/Ecosystem-profiles-comments/Map-summary.html'>this link to see a summary of map details</a>.</p>
-<table>
+<table style='table-layout: fixed;
+    width: 400px;'>
 <tr><th width='30%'>Reference</th><th>Map version 1.0</th><th>Map version 2.0</th></tr>
 <tr><th>‘Plate lines and polygons’ data by USGS/ESRI (<a href="https://www.arcgis.com/home/item.html?id=f155b76c13c84f62864446847f1ae652">https://www.arcgis.com/home/item.html?id=f155b76c13c84f62864446847f1ae652</a>, downloaded 5/5/2019)</th>
 <td>M3.7</td><td></td></tr><tr><th>Abell R, Thieme ML, Revenga C, Bryer M, Kottelat M, Bogutskaya N, Coad B, Mandrak N, Contreras Balderas S, Bussing W, Stiassny MLJ, Skelton P, Allen GR, Unmack P, Naseka A, Ng R, Sindorf N, Robertson J, Armijo E, Higgins JV, Heibel TJ, Wikramanayake E, Olson D, López HL, Reis RE, Lundberg JG, Sabaj Pérez MH, Petry P (2008)Freshwater ecoregions of the world: A new map of biogeographic units for freshwater biodiversity conservation, BioScience 58: 403–414.</th>
